Create new endpoint for applications
